# automerge-wazero-example

./: .gitignore  AGENT_AUTOMERGE.md  AUTOMERGE_API_STATUS.md  CLAUDE.md  CLEANUP_ANALYSIS.md  FINAL_SUMMARY.md  IMPLEMENTATION_ROADMAP.md  LICENSE  M1_M2_COMPLETE.md  MILESTONES_COMPLETE.md  Makefile  README.md  STATUS.md  SYSTEM_STATUS.md  TESTING.md  TEST_COMPLETION_REPORT.md  TEST_FIX_SUMMARY.md  TODO.md  WEB_TESTING_SUMMARY.md  package.json  test_merge.sh  test_text_crdt.html  test_text_crdt.mjs
.claude/: settings.json
docs/: README.md
docs/ai-agents/: automerge-guide.md  datastar-guide.md
docs/archive/: IMPLEMENTATION_STATUS.md  M0_COMPLETE.md  QUALITY_REPORT.md  implementation-status-2025-10-20.md
docs/development/: mcp-playwright.md  testing.md
docs/explanation/: ai-readability-improvements.md  architecture.md  deployment-architecture.md  folder-restructuring-options.md  option3-rename-plan.md  web-architecture.md
docs/how-to/: add-wasi-export.md  build-automerge-js.md  debug-wasm.md  embed-in-your-app.md
docs/reference/: api-mapping.md  automerge-comparison.md  http-api-complete.md
docs/templates/: layer-markers.md
docs/tutorials/: getting-started.md
examples/: 01_text_crdt.go  02_map_crdt.go  03_sync_protocol.go  README.md
go/: ARCHITECTURE.md  go.mod
go/cmd/: doc.am
rust/automerge_wasi/: Cargo.toml
rust/automerge_wasi/src/: counter.rs  cursor.rs  document.rs  generic.rs  history.rs  lib.rs  list.rs  map.rs  memory.rs  richtext.rs  state.rs  sync.rs  text.rs
screenshots/: .gitkeep
ui/: ui.html
web/: index.html
web/css/: main.css
(+132 files in other folders)
