[package]
name = "automerge_wasi"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
# Use local .src/ for version control and alignment with JavaScript
# This ensures Rust 0.7.0 and JS 3.2.0-alpha.0 are from same monorepo
automerge = { path = "../../.src/automerge/rust/automerge" }

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
